fixed spacing

--- a/public/normalUser/dashboard.css
+++ b/public/normalUser/dashboard.css
@@ -8,7 +8,8 @@
   z-index: 2;
   min-height: 100vh;
   display: flex;
-  padding: 20px 20px 20px 0; 
+  gap: 16px;
+  padding: 20px; 
 }
 
 
